tests/lit/tcheck/setter_00.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2023-2025 Intel Corporation

function A[] := value : Integer;

function T()
begin
    A[] := True;
// CHECK: Type error: type Integer does not match Boolean
end
